# align

./: Makefile.am  README.md  README.rst  boostrap.sh  configure.ac  ioalign.doxygen
include/: ioalign.h
src/: align.cc  bench.cc  mod11.cc  test.cc
